# flux-web-auth

./: .dockerignore  .editorconfig  .gitignore  Cargo.toml  Dockerfile  README.md  Rocket.toml  docker-compose.dev.yml  docker-compose.yml
.github/workflows/: build.yml  main.yml
backend/: Cargo.toml  Dockerfile  build.rs
backend/src/: config.rs  error.rs  main.rs  url.rs  utils.rs
backend/src/services/: authentication.rs  login.rs
config/: Caddyfile  Caddyfile.dev  envoy.dev.yaml  envoy.yaml
docs/: deployment.md
frontend/: .gitignore  Dockerfile  package.json  svelte.config.js  tailwind.config.cjs
frontend/src/: app.css  app.d.ts  app.html  hooks.ts
frontend/src/components/: Card.svelte
frontend/src/lib/: grpc.ts
frontend/src/routes/: __error.svelte  help.svelte  index.svelte  login.svelte
migrations/2022-03-19-145311_create_users/: up.sql
proto/: authentication.proto  common.proto  login.proto
scripts/: compile_protos.sh  gen_ec_keys.sh  hash_password.py  run_dev_backend.sh  run_dev_frontend.sh  run_dev_server.sh
src/: catchers.rs  database.rs  fairings.rs  main.rs  models.rs  schema.rs  utils.rs  version.txt  views.rs
src/views/: login.rs  logout.rs  mod.rs  status.rs
src/views/api/: info.rs  mod.rs
templates/: login.html.tera
templates/base/: global.html.tera
templates/errors/: 404.html.tera  host_denied.html.tera
templates/pages/: login.html.tera  logout.html.tera  status.html.tera
webpack/: package.json  postcss.config.js  tsconfig.json  webpack.config.js
webpack/src/: fontawesome.ts  index.ts
webpack/src/styles/: index.scss
