[package]
name = "flux-web-auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.1" }
rocket_dyn_templates = { version = "0.1.0-rc.1", features = ["tera"] }
serde = "1.0"
url = "2.2.2"
anyhow = "1.0"
time = "0.2.26"
