[package]
name = "flux-web-auth"
version = "0.0.6"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "flux-web-auth"
path = "src/main.rs"

[dependencies]
rocket = { version = "0.5.0-rc.1", features = ["json"] }
rocket_dyn_templates = { version = "0.1.0-rc.1", features = ["tera"] }
serde = "1.0"
serde_json = "1.0"
url = "2.2.2"
anyhow = "1.0"
time = "0.2.26"
jwt = { version = "0.16", features = ["openssl"] }
openssl = "0.10.38"
chrono = "0.4.19"
rand = "0.8.5"
