[package]
name = "flux-web-auth-backend"
version = "1.0.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.18.2", features = ["rt-multi-thread"] }
prost = "0.10.4"
tonic = "0.7.2"

[build-dependencies]
tonic-build = "0.7.2"
