[package]
name = "flux-web-auth-backend"
version = "1.0.0"
edition = "2021"
build = "build.rs"

[[bin]]
name = "flux-web-auth-backend"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.18.2", features = ["rt-multi-thread"] }
prost = "0.10.4"
tonic = "0.7.2"
openssl = "0.10.40"
jwt = { version = "0.16", features = ["openssl"] }
anyhow = "1.0"
url = "2.2.2"
envy = "0.4"
once_cell = "1.12.0"
unwrap_or = "1.0.0"
serde = "1.0"

[build-dependencies]
tonic-build = "0.7.2"
